# config_files

./: .bashrc  .instruction.txt.un~  .python.snippets.un~  .tmux.conf  .tmux.conf.home_desktop  .tmux.conf.swp  .tmux.conf_home_desktop  .vimrc  .youcompleteme_installation_instructions.txt.swo  .youcompleteme_installation_instructions.txt.swp  a.py  cbproject.py  global_system_setup.sh  init.vim  install_config_files.sh  make.snippets  oldcommit_init.vim  test  test.orig  test1  vim_download_install.sh  vim_instructions.txt  vundle_install.txt  youcompleteme_installation_instructions.txt
UltiSnips/: .cpp.snippets.un~  .tex.snippets.swo  .tex.snippets.swp  cpp.snippets  make.snippets  make_latex.snippets  tex.snippets
arch_update/: update.sh
bash/: .bashrc
codeblocks/: cbproject.py  template.cbp
cpp/: build.sh  main.cpp  organized_cpp_project.py  sample_complete_project_Makefile
cpp/cpp_templates/: CMakeLists.txt  Makefile  main.cpp  makefile  organized_cpp_project.py  remove_builds_bins.py
cron/: redshift.sh
csharp/: filename.sln
emacs/: .emacs  README  README~
git/: .git-credentials  .gitconfig  git_configurations
i3/: cd  config  i3_gaps.sh  i3_setup.sh  i3_shell.sh  i3blocks.conf
latex/: Makefile  install.sh  install_latex_arch.sh  install_latex_ubuntu.sh  main.tex  setup_notes.py
nvim/: .init.vim.swp  .init.vim.un~  .term.swp  .ycm_extra_conf.py  .ycm_extra_conf_backup1.py  .ycm_extra_conf_new.py  .ycm_extra_conf_old.py  :q  \  init.vim  init.vim~  init_backup.vim  init_deoplete.vim  init_quick_deploy.vim  init_some_other_code_completion.vim  (+9 more)
(+135 files in other folders)
